Notebook complete.  App mostly complete.  Bonus notebooks complete.

--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -1,33 +1,26 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib inline\n",
-    "from matplotlib import style\n",
-    "style.use('fivethirtyeight')\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import datetime as dt"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Reflect Tables into SQLAlchemy ORM"
+    "# Step 1 - Climate Analysis and Exploration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dependencies and setup\n",
+    "%matplotlib inline\n",
+    "from matplotlib import style\n",
+    "style.use('fivethirtyeight')\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import datetime as dt"
    ]
   },
   {
@@ -49,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create engine to hawaii.sqlite\n",
+    "# Create engine to hawaii.sqlite\n",
     "engine = create_engine(\"sqlite:///Resources/hawaii.sqlite\")"
    ]
   },
@@ -59,10 +52,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# reflect an existing database into a new model\n",
+    "# Reflect an existing database into a new model\n",
     "Base = automap_base()\n",
     "\n",
-    "# reflect the tables\n",
+    "# Reflect the tables\n",
     "Base.prepare(engine, reflect = True)"
    ]
   },
@@ -135,15 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exploratory Precipitation Analysis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Design a query to retrieve the last 12 months of precipitation data and plot the results.\n",
-    "(Starting from the most recent data point in the database)."
+    "### Precipitation Analysis"
    ]
   },
   {
@@ -152,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Find the most recent date in the data set\n",
+    "# Find the most recent date in the dataset\n",
     "stringRecent_date = session.query(measurement.date).order_by(measurement.date.desc()).first()[0]\n",
     "stringRecent_date"
    ]
@@ -174,7 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate the date one year from the latest date in data set\n",
+    "# Calculate the date one year prior to the most recent date in dataset\n",
     "mostFormer_date = mostRecent_date - dt.timedelta(days = 365)\n",
     "mostFormer_date"
    ]
@@ -185,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Perform a query to retrieve the date and precipitation scores\n",
+    "# Perform a query to retrieve the dates and precipitation scores\n",
     "precipitationData = session.query(measurement.date, measurement.prcp).\\\n",
     "                    filter((measurement.date <= mostRecent_date) & (measurement.date >= mostFormer_date)).all()"
    ]
@@ -196,7 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save the query results as a Pandas DataFrame and set the index to the date column\n",
+    "# Save the query results as a pandas DataFrame and set the index to the date column\n",
     "precipitation_df = pd.DataFrame(precipitationData)\n",
     "precipitation_df = precipitation_df.set_index(\"date\")"
    ]
@@ -238,81 +223,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plot_df = precipitation_df.reset_index()\n",
-    "# plot_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plot_df.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# grouped_df = plot_df.groupby([\"date\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dailyRain = grouped_df[\"Precipitation\"].sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# final_df = pd.DataFrame({\"Daily Precipitation\":(dailyRain)})\n",
-    "# final_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# final_df = final_df.reset_index()\n",
-    "# final_df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Use Pandas Plotting with Matplotlib to plot the data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create groupby object by date?\n",
-    "# Bar plot???\n",
+    "# Define plot size, color and transparency, legend, and x tickmark orientation\n",
+    "pandasPlot = precipitation_df.plot(figsize = (18,10), color = \"mediumseagreen\", alpha = 1, legend = True, rot = 45)\n",
     "\n",
-    "# Define bar plot size, color and transparency, legend, and x tickmark orientation\n",
-    "pandasPlot = precipitation_df.plot(figsize = (18,10), color = \"mediumseagreen\", alpha = 1, legend = True,\n",
-    "                                    rot = 45)\n",
-    "\n",
-    "# Define bar plot title, x label, and y label (and their font sizes)\n",
-    "pandasPlot.set_title(\"Daily Precipitation Totals (August 23, 2016 thru August 23, 2017)\", fontsize = 18)\n",
+    "# Define plot title, x label, and y label (and their font sizes)\n",
+    "pandasPlot.set_title(f\"Daily Precipitation Totals ({mostFormer_date} thru {mostRecent_date})\", fontsize = 18)\n",
     "pandasPlot.set_xlabel(\"Date\", fontsize = 14)\n",
-    "pandasPlot.set_ylabel(\"Precipitation (in inches)\", fontsize = 14)"
+    "pandasPlot.set_ylabel(\"Precipitation (in inches)\", fontsize = 14)\n",
+    "\n",
+    "# Print plot to image file\n",
+    "plt.savefig(\"Images/Daily_Precipitation.jpg\")\n",
+    "\n",
+    "# Display plot\n",
+    "plt.show()"
    ]
   },
   {
@@ -321,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use Pandas to calculate the summary statistics for the precipitation data\n",
+    "# Use pandas to calculate the summary statistics for the precipitation data\n",
     "precipitation_df.describe()"
    ]
   },
@@ -329,7 +252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exploratory Station Analysis"
+    "### Station Analysis"
    ]
   },
   {
@@ -339,8 +262,10 @@
    "outputs": [],
    "source": [
     "# Design a query to calculate the total number stations in the dataset\n",
-    "all_stations = session.query(station).count()\n",
-    "print(f\"The total number of stations in the dataset is:  {all_stations}\")"
+    "totalStations = session.query(station).count()\n",
+    "\n",
+    "# Print total number of stations to display\n",
+    "print(f\"The total number of stations in the dataset is:  {totalStations}.\")"
    ]
   },
   {
@@ -350,10 +275,11 @@
    "outputs": [],
    "source": [
     "# Design a query to find the most active stations (i.e. what stations have the most rows?)\n",
-    "# List the stations and the counts in descending order.\n",
     "mostActive_stations = session.query(measurement.station, func.count(measurement.station), station.name).\\\n",
     "                      order_by(func.count(measurement.station).desc()).\\\n",
     "                      group_by(measurement.station).all()\n",
+    "\n",
+    "# List the stations and the counts in descending order\n",
     "mostActive_stations"
    ]
   },
@@ -363,9 +289,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Using the most active station id from the previous query, calculate the lowest, highest, and average temperature.\n",
+    "# Declare variables to store extracted values from array\n",
     "mostActive_id = mostActive_stations[0][0]\n",
+    "mostActive_name = mostActive_stations[0][2]\n",
     "\n",
+    "# Print station with highest number of observations to display\n",
+    "print(f\"Station ID {mostActive_id} ({mostActive_name}) has the highest number of observations.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Using the most active station id from the previous query, calculate the lowest, highest, and average temperature\n",
     "lowest_temp = session.query(measurement.tobs).\\\n",
     "              filter(measurement.station == mostActive_id).\\\n",
     "              order_by(measurement.tobs.asc()).first()\n",
@@ -377,14 +315,10 @@
     "average_temp = session.query(func.avg(measurement.tobs)).\\\n",
     "               filter(measurement.station == mostActive_id)\n",
     "\n",
-    "# Pull station name from stations table by ID\n",
-    "# station_name = session.query(station.name).\\\n",
-    "#                filter(measurement.station == mostActive_id)\n",
-    "# print(f\"At station {station_name}, the lowest temperature recorded was {lowest_temp[0]} F.\")\n",
-    "\n",
-    "print(f\"At station ID {mostActive_id}, the lowest temperature recorded was {lowest_temp[0]} F.\")\n",
-    "print(f\"At station ID {mostActive_id}, the highest temperature recorded was {highest_temp[0]} F.\")\n",
-    "print(f\"At station ID {mostActive_id}, the average temperature recorded was {average_temp[0]} F.\")"
+    "# Print lowest, average, and highest temperatures to display\n",
+    "print(f\"At station ID {mostActive_id} ({mostActive_name}), the lowest temperature recorded was {lowest_temp[0]}°F.\")\n",
+    "print(f\"At station ID {mostActive_id} ({mostActive_name}), the average temperature recorded was {average_temp[0]}°F.\")\n",
+    "print(f\"At station ID {mostActive_id} ({mostActive_name}), the highest temperature recorded was {highest_temp[0]}°F.\")"
    ]
   },
   {
@@ -408,7 +342,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save the query results as a Pandas DataFrame\n",
+    "# Save the query results as a pandas DataFrame\n",
     "temperature_df = pd.DataFrame(temperatureData)\n",
     "temperature_df"
    ]
@@ -434,14 +368,14 @@
     "temperature_df.plot.hist(color = \"darkorange\", ec = \"k\", alpha = 0.5, figsize = (18, 10), bins = 12)\n",
     "\n",
     "# Define histogram plot title, x label, and y label (and their font sizes)\n",
-    "# plt.title(f\"Frequency of Recorded Temperatures at {station_name}\", fontsize = 18)\n",
-    "plt.title(f\"Frequency of Recorded Temperatures at Station ID {mostActive_id}\", fontsize = 18)\n",
+    "plt.title(f\"Frequency of Recorded Temperatures at Station ID {mostActive_id} ({mostActive_name})\", fontsize = 18)\n",
     "plt.xlabel(\"Temperature (F°)\", fontsize = 14)\n",
     "plt.ylabel(\"Number of Observations\", fontsize = 14)\n",
     "\n",
-    "# Print pyplot histogram plot to image file\n",
-    "# plt.savefig(\"temperatures_histogram.png\")\n",
+    "# Print histogram plot to image file\n",
+    "plt.savefig(\"Images/Temperatures_Histogram.jpg\")\n",
     "\n",
+    "# Display histogram plot\n",
     "plt.show()"
    ]
   },
@@ -449,7 +383,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Close session"
+    "# Close Session"
    ]
   },
   {
@@ -458,7 +392,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Close Session\n",
+    "# Close session\n",
     "session.close()"
    ]
   },
