--- a/temp_analysis_bonus_1_starter.ipynb
+++ b/temp_analysis_bonus_1_starter.ipynb
@@ -13,6 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Dependencies and setup\n",
     "import pandas as pd\n",
     "from datetime import datetime as dt"
    ]
@@ -23,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# \"tobs\" is \"temperature observations\"\n",
+    "# Read CSV into pandas DataFrame\n",
     "df = pd.read_csv(\"Resources/hawaii_measurements.csv\")\n",
     "df.head()"
    ]
@@ -46,7 +47,6 @@
    "outputs": [],
    "source": [
     "# Set the date column as the DataFrame index\n",
-    "\n",
     "measurement_df = pd.DataFrame(df)\n",
     "measurement_df = measurement_df.set_index(measurement_df[\"date\"])\n",
     "measurement_df.head()"
@@ -58,6 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Drop the original date column\n",
     "measurement_df = measurement_df.drop(columns = \"date\")\n",
     "measurement_df.head()"
    ]
@@ -75,6 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Dependencies and setup\n",
     "from scipy import stats as st"
    ]
   },
@@ -84,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Filter data for desired months\n",
+    "# Filter data for desired month\n",
     "june_df = measurement_df[measurement_df.index.month == 6]\n",
     "june_df"
    ]
@@ -95,8 +97,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Identify the average temperature for June\n",
+    "# Calculate the average temperature for June\n",
     "juneAverage_temp = june_df[\"tobs\"].mean()\n",
+    "\n",
+    "# Print average temperature to display\n",
     "print(f\"The average temperature in Hawaii for June is {round(juneAverage_temp)}°F.\")"
    ]
   },
@@ -106,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Filter data for desired months\n",
+    "# Filter data for desired month\n",
     "december_df = measurement_df[measurement_df.index.month == 12]\n",
     "december_df"
    ]
@@ -117,7 +121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Identify the average temperature for December\n",
+    "# Calculate the average temperature for December\n",
     "decemberAverage_temp = december_df[\"tobs\"].mean()\n",
     "print(f\"The average temperature in Hawaii for December is {round(decemberAverage_temp)}°F.\")"
    ]
@@ -128,20 +132,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create collections of temperature data\n",
-    "juneStation_mean = june_df.groupby(\"station\").mean()\n",
-    "decemberStation_mean = december_df.groupby(\"station\").mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Run paired t-test\n",
+    "# Perform an independent-samples t-test\n",
     "p_value = st.ttest_ind(june_df[\"tobs\"], december_df[\"tobs\"])\n",
-    "print(f\"Using a paired sample t-test, the p-value is:  {p_value}.\")"
+    "\n",
+    "# Print t-test results to display\n",
+    "print(f\"Using an independent-samples t-test, the p-value is:  {p_value[1]}.\")"
    ]
   },
   {
@@ -158,7 +153,9 @@
    "metadata": {},
    "source": [
     "### Conclusion\n",
-    "The p-value is the evidence against a null hypothesis.  The smaller the p-value, the stronger the evidence in favor of rejecting the null hypothesis.  In this case, since the p-value is less than 0.05, we reject the null hypothesis and determine that the results ARE statistically significant."
+    "We used an \"unpaired t-test\" (independent-samples t-test) to analyze June and December temperatures.  Our rationale for choosing the independent-samples t-test (versus the paired t-test) is because when two samples are taken from two populations with different mean values, it is likely that the means of the two samples will also differ.\n",
+    "\n",
+    "The p-value is the evidence against a null hypothesis.  The smaller the p-value, the stronger the evidence in favor of rejecting the null hypothesis.  In this case, since our p-value is substantially less than 0.05, we reject the null hypothesis and determine that the results ARE statistically significant."
    ]
   },
   {
