--- a/temp_analysis_bonus_2_starter.ipynb
+++ b/temp_analysis_bonus_2_starter.ipynb
@@ -1,33 +1,26 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib inline\n",
-    "from matplotlib import style\n",
-    "style.use('fivethirtyeight')\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import datetime as dt"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reflect Tables into SQLALchemy ORM"
+    "# Bonus: Temperature Analysis II"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dependencies and setup\n",
+    "%matplotlib inline\n",
+    "from matplotlib import style\n",
+    "style.use('fivethirtyeight')\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import datetime as dt"
    ]
   },
   {
@@ -49,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create engine to hawaii.sqlite\n",
+    "# Create engine to hawaii.sqlite\n",
     "engine = create_engine(\"sqlite:///Resources/hawaii.sqlite\")"
    ]
   },
@@ -59,10 +52,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# reflect an existing database into a new model\n",
+    "# Reflect an existing database into a new model\n",
     "Base = automap_base()\n",
     "\n",
-    "# reflect the tables\n",
+    "# Reflect the tables\n",
     "Base.prepare(engine, reflect = True)"
    ]
   },
@@ -135,33 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bonus Challenge Assignment: Temperature Analysis II"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# This function called `calc_temps` will accept start date and end date in the format '%Y-%m-%d' \n",
-    "# and return the minimum, maximum, and average temperatures for that range of dates\n",
-    "def calc_temps(start_date, end_date):\n",
-    "    \"\"\"TMIN, TAVG, and TMAX for a list of dates.\n",
-    "    \n",
-    "    Args:\n",
-    "        start_date (string): A date string in the format %Y-%m-%d\n",
-    "        end_date (string): A date string in the format %Y-%m-%d\n",
-    "        \n",
-    "    Returns:\n",
-    "        TMIN, TAVE, and TMAX\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    return session.query(func.min(measurement.tobs), func.avg(measurement.tobs), func.max(measurement.tobs)).\\\n",
-    "        filter(measurement.date >= start_date).filter(measurement.date <= end_date).all()\n",
-    "\n",
-    "# For example\n",
-    "print(calc_temps('2012-02-28', '2012-03-05'))"
+    "### Trip Average Temperatures"
    ]
   },
   {
@@ -174,7 +141,7 @@
     "start_date = \"2012-08-01\"\n",
     "end_date = \"2012-08-07\"\n",
     "\n",
-    "# Use the function `calc_temps` to calculate the tmin, tavg, and tmax for a year in the dataset\n",
+    "# Use the function 'calc_temps' to calculate the tmin, tavg, and tmax for a year in the dataset\n",
     "def calc_temps(start_date, end_date):\n",
     "    \"\"\"TMIN, TAVG, and TMAX for a list of dates.\n",
     "    \n",
@@ -199,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot the results from your previous query as a bar chart. \n",
+    "# Plot the results from your previous query as a bar chart\n",
     "# Use \"Trip Avg Temp\" as your Title\n",
     "# Use the average temperature for bar height (y value)\n",
     "# Use the peak-to-peak (tmax-tmin) value as the y error bar (yerr)\n",
@@ -226,9 +193,10 @@
     "plt.xlim(0, 5)\n",
     "plt.tick_params(bottom = False, labelbottom = False)\n",
     "\n",
-    "# Print pyplot bar plot to image file\n",
-    "# plt.savefig(\"../Images/Trip_Avg_Bar_Plot.jpg\")\n",
+    "# Print bar plot to image file\n",
+    "plt.savefig(\"Images/Trip_Avg_Bar_Plot.jpg\")\n",
     "\n",
+    "# Display bar plot\n",
     "plt.show()"
    ]
   },
@@ -245,8 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate the total amount of rainfall per weather station for your trip dates using the previous year's \n",
-    "# matching dates.\n",
+    "# Calculate the total amount of rainfall per weather station for your trip dates using the previous year's matching dates\n",
     "# Sort this in descending order by precipitation amount and list the station, name, latitude, longitude, and elevation\n",
     "precipitationData = session.query(measurement.date, measurement.station, measurement.prcp, station.name, station.latitude,\n",
     "                                  station.longitude, station.elevation).\\\n",
@@ -260,6 +227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save the query results as a pandas DataFrame\n",
     "precipitation_df = pd.DataFrame(precipitationData)\n",
     "precipitation_df"
    ]
@@ -270,6 +238,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Check total precipitation for date range for all stations\n",
+    "precipitation_df[\"prcp\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop rows with NaN values\n",
     "precipitation_df.dropna(axis = 0, how = \"any\", inplace = True)\n",
     "precipitation_df"
    ]
@@ -280,6 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Group by station ID and calculate total precipitation\n",
     "stationPrcp = precipitation_df.groupby([\"station\"])\n",
     "stationRain = stationPrcp[\"prcp\"].sum()"
    ]
@@ -290,6 +270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create DataFrame with grouped by station precipitation totals\n",
     "stationRain_df = pd.DataFrame({\"Precipitation\":(stationRain)})\n",
     "stationRain_df"
    ]
@@ -300,6 +281,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Reset index\n",
     "stationRain_df = stationRain_df.reset_index()\n",
     "stationRain_df"
    ]
@@ -310,9 +292,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Merge caseData and censusData DataFrames\n",
-    "mergedStations_df = pd.merge(stationRain_df, precipitation_df, how = \"left\", left_on = \"station\", right_on = \"station\")\n",
-    "mergedStations_df"
+    "# Declare variables to hold series\n",
+    "precipAmt = stationRain_df[\"Precipitation\"]\n",
+    "stationID = stationRain_df[\"station\"]\n",
+    "precipName = precipitation_df[\"name\"]\n",
+    "precipLat = precipitation_df[\"latitude\"]\n",
+    "precipLng = precipitation_df[\"longitude\"]\n",
+    "precipElv = precipitation_df[\"elevation\"]\n",
+    "\n",
+    "# Assemble resulting series into a new DataFrame\n",
+    "dailyRain_df = pd.DataFrame({\"Precipitation\":(precipAmt),\n",
+    "                             \"Station ID\":(stationID),\n",
+    "                             \"Station Name\":(precipName),\n",
+    "                             \"Latitude\":(precipLat),\n",
+    "                             \"Longitude\":(precipLng),\n",
+    "                             \"Elevation\":(precipElv)})\n",
+    "dailyRain_df"
    ]
   },
   {
@@ -320,14 +315,50 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Drop rows containing NaN values\n",
+    "dailyRain_df.dropna(axis = 0, how = \"any\", inplace = True)\n",
+    "dailyRain_df"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Reconcile total precipitation for grouped by station DataFrame against dated range DataFrame\n",
+    "dailyRain_df[\"Precipitation\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sort this in descending order by precipitation amount\n",
+    "dailyRain_df.sort_values(\"Precipitation\", ascending = False, inplace = True)\n",
+    "dailyRain_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reset index and drop resulting 'index' column\n",
+    "dailyRain_df.reset_index(inplace = True, drop = True)\n",
+    "dailyRain_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Daily Temperature Range and Average"
+   ]
   },
   {
    "cell_type": "code",
@@ -337,7 +368,6 @@
    "source": [
     "# Use this function to calculate the daily normals \n",
     "# (i.e. the averages for tmin, tmax, and tavg for all historic data matching a specific month and day)\n",
-    "\n",
     "def daily_normals(date):\n",
     "    \"\"\"Daily Normals.\n",
     "    \n",
@@ -362,22 +392,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# calculate the daily normals for your trip\n",
-    "# push each tuple of calculations into a list called `normals`\n",
+    "# Declare variables to hold vacation start and end dates\n",
+    "start = (dt.datetime.strptime(\"2011-08-01\", \"%Y-%m-%d\")).date()\n",
+    "end = (dt.datetime.strptime(\"2011-08-07\", \"%Y-%m-%d\")).date()\n",
     "\n",
-    "# Set the start and end date of the trip\n",
-    "# start = \"2011-08-01\"\n",
-    "# end = \"2011-08-07\"\n",
-    "\n",
-    "# # Use the start and end date to create a range of dates\n",
-    "# startingDate = (dt.datetime.strptime(start, \"%Y-%m-%d\")).date()\n",
-    "# endingDate = (dt.datetime.strptime(end, \"%Y-%m-%d\")).date()\n",
-    "\n",
-    "# numdays = 7\n",
-    "# dateList = []\n",
-    "# for x in range (0, numdays):\n",
-    "#     dateList.append(endingDate - dt.timedelta(days = x))\n",
-    "# print(dateList)"
+    "# Create empty list to hold dates\n",
+    "dateList = []"
    ]
   },
   {
@@ -386,116 +406,91 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Strip off the year and save a list of strings in the format %m-%d\n",
-    "\n",
-    "# def daily_normals(date):\n",
-    "#     \"\"\"Daily Normals.\n",
+    "# Loop through range of specified dates and append to dateList with %m-%d format\n",
+    "while start <= end:\n",
+    "    month = start.strftime(\"%m\")\n",
+    "    day = start.strftime(\"%d\")\n",
+    "    dateList.append(f\"{month}-{day}\")\n",
+    "    start += dt.timedelta(days = 1)\n",
     "    \n",
-    "#     Args:\n",
-    "#         date (str): A date string in the format '%m-%d'\n",
-    "        \n",
-    "#     Returns:\n",
-    "#         A list of tuples containing the daily normals, tmin, tavg, and tmax\n",
-    "    \n",
-    "#     \"\"\"\n",
-    "    \n",
-    "#     sel = [func.min(measurement.tobs), func.avg(measurement.tobs), func.max(measurement.tobs)]\n",
-    "#     return session.query(*sel).filter(func.strftime(\"%m-%d\", measurement.date) == date).all()\n",
+    "# Reset start date to original    \n",
+    "start = (dt.datetime.strptime(\"2011-08-01\", \"%Y-%m-%d\")).date()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check to see if list was populated with formatted dates\n",
+    "dateList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create empty list to hold daily normals\n",
+    "normals = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loop through dateList and append temperatures to daily normals list\n",
+    "for x in range(len(dateList)):\n",
+    "    dailyTemps = daily_normals(dateList[x])\n",
+    "    normals.append(dailyTemps[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check to see if list was populated with tuples of temperatures\n",
+    "normals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the previous query results into a pandas DataFrame and add the trip_dates range as the date index\n",
+    "normals_df = pd.DataFrame(normals, columns = [\"Daily Min Temp\", \"Daily Avg Temp\", \"Daily Max Temp\"])\n",
+    "normals_df[\"Date\"] = dateList\n",
+    "normals_df = normals_df.set_index(\"Date\")\n",
+    "normals_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot the daily normals as an area plot with 'stacked = False'\n",
+    "normals_df.plot.area(figsize = (18,10), stacked = False, alpha = 0.25, rot = 45, fontsize = 12)\n",
     "\n",
-    "# daily_normals(dateList)\n",
-    "\n",
-    "# Use the `daily_normals` function to calculate the normals for each date string \n",
-    "# and append the results to a list called `normals`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Set the start and end date of the trip\n",
-    "start = \"2011-08-01\"\n",
-    "end = \"2011-08-07\"\n",
-    "\n",
-    "# Perform a query to retrieve the date and precipitation scores\n",
-    "tempsData = session.query(measurement.date, measurement.station, measurement.tobs).\\\n",
-    "            filter((measurement.date <= end) & (measurement.date >= start)).all()\n",
-    "tempsData"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load the previous query results into a Pandas DataFrame and add the `trip_dates` range as the `date` index\n",
-    "temps_df = pd.DataFrame(tempsData)\n",
-    "# precipitation_df = precipitation_df.set_index(\"date\")\n",
-    "temps_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Convert the date column format from string to datetime\n",
-    "temps_df[\"date\"] = pd.to_datetime(temps_df[\"date\"])\n",
-    "temps_df.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "temps_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dateTemp = temps_df.groupby([\"date\"])\n",
-    "\n",
-    "dailyMin_Temp = dateTemp[\"tobs\"].min()\n",
-    "dailyAvg_Temp = dateTemp[\"tobs\"].mean()\n",
-    "dailyMax_Temp = dateTemp[\"tobs\"].max()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dailyTemps_df = pd.DataFrame({\"Daily Minimum Temp\":(dailyMin_Temp),\n",
-    "                              \"Daily Average Temp\":(dailyAvg_Temp),\n",
-    "                              \"Daily Maximum Temp\":(dailyMax_Temp)})\n",
-    "dailyTemps_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plot the daily normals as an area plot with `stacked=False`\n",
-    "dailyTemps_df.plot.area(figsize = (18,10), stacked = False, alpha = 0.25, rot = 45, fontsize = 12)\n",
-    "\n",
+    "# Define area plot title, x label and y label (and their font sizes), and y axis limits\n",
     "plt.title(f\"Daily Temperature Normals from {start} to {end}\", fontsize = 18)\n",
     "plt.xlabel(\"Date\", fontsize = 14)\n",
     "plt.ylabel(\"Temperature (F°)\", fontsize = 14)\n",
     "plt.ylim(0, 110)\n",
     "\n",
-    "# plt.savefig(\"Images/Daily_Temperature_Normals.png\")\n",
+    "# Print area plot to image file\n",
+    "plt.savefig(\"Images/Daily_Temperature_Normals.jpg\")\n",
+    "\n",
+    "# Display area plot\n",
     "plt.show()"
    ]
   },
@@ -512,9 +507,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Close Session\n",
+    "# Close session\n",
     "session.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
