Notebook complete.  App complete.  Bonuses complete.

--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -138,7 +138,7 @@
    "outputs": [],
    "source": [
     "# Find the most recent date in the dataset\n",
-    "stringRecent_date = session.query(measurement.date).order_by(measurement.date.desc()).first()[0]\n",
+    "stringRecent_date = session.query(measurement.date).order_by(measurement.date.desc()).first()\n",
     "stringRecent_date"
    ]
   },
@@ -232,7 +232,7 @@
     "pandasPlot.set_ylabel(\"Precipitation (in inches)\", fontsize = 14)\n",
     "\n",
     "# Print plot to image file\n",
-    "plt.savefig(\"Images/Daily_Precipitation.jpg\")\n",
+    "plt.savefig(\"Images/My_Images/Daily_Precipitation.jpg\")\n",
     "\n",
     "# Display plot\n",
     "plt.show()"
@@ -373,7 +373,7 @@
     "plt.ylabel(\"Number of Observations\", fontsize = 14)\n",
     "\n",
     "# Print histogram plot to image file\n",
-    "plt.savefig(\"Images/Temperatures_Histogram.jpg\")\n",
+    "plt.savefig(\"Images/My_Images/Temperatures_Histogram.jpg\")\n",
     "\n",
     "# Display histogram plot\n",
     "plt.show()"
