--- a/temp_analysis_bonus_2_starter.ipynb
+++ b/temp_analysis_bonus_2_starter.ipynb
@@ -194,7 +194,7 @@
     "plt.tick_params(bottom = False, labelbottom = False)\n",
     "\n",
     "# Print bar plot to image file\n",
-    "plt.savefig(\"Images/Trip_Avg_Bar_Plot.jpg\")\n",
+    "plt.savefig(\"Images/My_Images/Trip_Avg_Bar_Plot.jpg\")\n",
     "\n",
     "# Display bar plot\n",
     "plt.show()"
@@ -408,9 +408,9 @@
    "source": [
     "# Loop through range of specified dates and append to dateList with %m-%d format\n",
     "while start <= end:\n",
-    "    month = start.strftime(\"%m\")\n",
-    "    day = start.strftime(\"%d\")\n",
-    "    dateList.append(f\"{month}-{day}\")\n",
+    "    dateMonth = start.strftime(\"%m\")\n",
+    "    dateDay = start.strftime(\"%d\")\n",
+    "    dateList.append(f\"{dateMonth}-{dateDay}\")\n",
     "    start += dt.timedelta(days = 1)\n",
     "    \n",
     "# Reset start date to original    \n",
@@ -433,7 +433,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create empty list to hold daily normals\n",
+    "# Create empty list to hold daily normal min/avg/max temps\n",
     "normals = []"
    ]
   },
@@ -488,7 +488,7 @@
     "plt.ylim(0, 110)\n",
     "\n",
     "# Print area plot to image file\n",
-    "plt.savefig(\"Images/Daily_Temperature_Normals.jpg\")\n",
+    "plt.savefig(\"Images/My_Images/Daily_Temperature_Normals.jpg\")\n",
     "\n",
     "# Display area plot\n",
     "plt.show()"
