--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -138,7 +138,7 @@
    "outputs": [],
    "source": [
     "# Find the most recent date in the dataset\n",
-    "stringRecent_date = session.query(measurement.date).order_by(measurement.date.desc()).first()\n",
+    "stringRecent_date = session.query(measurement.date).order_by(measurement.date.desc()).first()[0]\n",
     "stringRecent_date"
    ]
   },
@@ -289,7 +289,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Declare variables to store extracted values from array\n",
+    "# Declare variables to store extracted tuples from list\n",
     "mostActive_id = mostActive_stations[0][0]\n",
     "mostActive_name = mostActive_stations[0][2]\n",
     "\n",
