--- a/temp_analysis_bonus_2_starter.ipynb
+++ b/temp_analysis_bonus_2_starter.ipynb
@@ -171,7 +171,7 @@
     "# Use the average temperature for bar height (y value)\n",
     "# Use the peak-to-peak (tmax-tmin) value as the y error bar (yerr)\n",
     "\n",
-    "# Declare variables to hold values extracted from array\n",
+    "# Declare variables to hold values extracted from list\n",
     "tmax = calc_temps(start_date, end_date)[0][2]\n",
     "tavg = (round(calc_temps(start_date, end_date)[0][1]))\n",
     "tmin = calc_temps(start_date, end_date)[0][0]\n",
